Sided block entities rework Moved and refactored data generation classes